# enclose-horse-solver

./: .gitignore  README.md  main.py  pyproject.toml  solver.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: usage.md
src/: model.py  output.py  parser.py
tests/: test_model.py  test_parser.py
tests/fixtures/: day91-costly.csv  day98.csv  day98_lovebirds.csv
